✨ refactor: standardize naming conventions and improve AMQP handling
* Renamed interfaces and classes from `IAMQP*` to `IAmqp*` for consistency and readability.
* Updated `AddRabbitMQConsumer` to register services with the new `IAmqpSerializer` interface.
* Introduced a static class `AmqpResults` for simplified creation of AMQP result types (`Ack`, `Nack`, `Reject`, `Reply`).
* Revised documentation and comments to reflect new naming conventions and clarify class/method purposes.
* Updated tests to validate the behavior of the refactored code and accommodate new naming conventions.
* Enhanced overall maintainability and clarity of the RabbitMQ consumer implementation.

--- a/src/Oragon.RabbitMQ/Oragon.RabbitMQ.csproj
+++ b/src/Oragon.RabbitMQ/Oragon.RabbitMQ.csproj
@@ -4,6 +4,9 @@
   <PropertyGroup>
     <Description>Provides a minimal API for RabbitMQ consumers, designed for simplicity and resilience. Enhance message handling with streamlined configuration and robust performance.</Description>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Extensions.DependencyInjection2.cs" />
+  </ItemGroup>
  
 
   <ItemGroup>
