✨ refactor: update solution structure and configurations
* Introduced a new `Oragon.RabbitMQ.slnx` file for better organization of projects in XML format.

* Updated the `.gitattributes` , `.gitignore` , to handle `.slnx` files

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ syntax: glob
 *.user
 *.userosscache
 *.sln.docstates
+*.slnx.docstates
 
 # Build results
 
@@ -33,6 +34,7 @@ msbuild.wrn
 
 # Visual Studio 2015 Pre-CTP6
 *.sln.ide
+*.slnx.ide
 *.ide/
 
 # MSTest test Results
