🚀 chore: update project files and package versions
The project files for `DotNetAspireApp` have been updated to reflect the following changes:

- Upgraded `Aspire.Hosting.AppHost`, `Aspire.Hosting.RabbitMQ`, and `Aspire.Hosting.Redis` packages from version `9.1.0` to `9.2.0`.
- Updated `Microsoft.Extensions.Http.Resilience` from version `9.3.0` to `9.4.0`.
- Updated `Microsoft.Extensions.ServiceDiscovery` from version `9.1.0` to `9.2.0`.
- In `DotNetAspireApp.Web.csproj`, upgraded `Aspire.StackExchange.Redis.OutputCaching` from `9.1.0` to `9.2.0` and `Radzen.Blazor` from `5.3.1` to `6.6.1`.
- Removed older package references in `DotNetAspireApp.Worker.csproj` and updated `Swashbuckle.AspNetCore` to version `8.1.1`.
- In `Oragon.RabbitMQ.AspireClient.csproj`, updated `Microsoft.Extensions.Configuration.Binder` and `Microsoft.Extensions.Hosting.Abstractions` from `9.0.3` to `9.0.4`, and added `AspNetCore.HealthChecks.Rabbitmq` version `9.0.0`.
- Updated `Microsoft.Extensions.DependencyInjection.Abstractions`, `Microsoft.Extensions.Hosting.Abstractions`, and `Microsoft.Extensions.Logging.Abstractions` in `Oragon.RabbitMQ.csproj` to version `9.0.4`.
- Updated `Testcontainers` and `Testcontainers.RabbitMq` packages in `Oragon.RabbitMQ.IntegratedTests.csproj` from `4.3.0` to `4.4.0`.

--- a/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
+++ b/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="./../../../Global.Build.props" />
 
@@ -23,9 +23,9 @@
     <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.2" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' OR '$(TargetFramework)' == '' ">
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.1.0" />
-    <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.1.0" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="9.1.0" />    
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.2.0" />
+    <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.2.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.2.0" />
   </ItemGroup>
 
   <!--<ItemGroup>
