--- a/samples/Aspire/DotNetAspireApp.Worker/DotNetAspireApp.Worker.csproj
+++ b/samples/Aspire/DotNetAspireApp.Worker/DotNetAspireApp.Worker.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="./../../../Global.Build.props" />
 
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
+  <ItemGroup>    
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.AspireClient\Oragon.RabbitMQ.AspireClient.csproj" />
