--- a/.editorconfig
+++ b/.editorconfig
@@ -339,6 +339,9 @@ dotnet_diagnostic.CA2249.severity = warning
 # IDE0005: Remove unnecessary usings
 dotnet_diagnostic.IDE0005.severity = warning
 
+# IDE0007: use 'var' instead of explicit type
+dotnet_diagnostic.IDE0007.severity = suggestion
+
 # IDE0011: Curly braces to surround blocks of code
 dotnet_diagnostic.IDE0011.severity = suggestion
 
