--- a/samples/Aspire/DotNetAspireApp.ApiService/DotNetAspireApp.ApiService.csproj
+++ b/samples/Aspire/DotNetAspireApp.ApiService/DotNetAspireApp.ApiService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="./../../../Global.Build.props" />
 
@@ -10,6 +10,10 @@
     <ProjectReference Include="..\..\..\src\Oragon.RabbitMQ.Serializer.SystemTextJson\Oragon.RabbitMQ.Serializer.SystemTextJson.csproj" />    
     <ProjectReference Include="..\DotNetAspireApp.Common\DotNetAspireApp.Common.csproj" />
     <ProjectReference Include="..\DotNetAspireApp.ServiceDefaults\DotNetAspireApp.ServiceDefaults.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="RabbitMQ.AMQP.Client" Version="0.2.0-beta.0" />
   </ItemGroup>
 
 </Project>
