--- a/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
+++ b/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DotNetAspireApp.ApiService\DotNetAspireApp.ApiService.csproj" />
     <ProjectReference Include="..\DotNetAspireApp.Web\DotNetAspireApp.Web.csproj" />
     <ProjectReference Include="..\DotNetAspireApp.Worker\DotNetAspireApp.Worker.csproj" />
