Feature: Add support to .NET 10

--- a/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
+++ b/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
@@ -1,9 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Aspire.AppHost.Sdk/13.1.0">
 
   <Import Project="./../../../Global.Build.props" />
-
-  <!-- <Sdk Condition=" '$(TargetFramework)' == 'net9.0' " Name="Aspire.AppHost.Sdk" Version="9.0.0" /> -->
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -21,19 +18,9 @@
     <ProjectReference Include="..\DotNetAspireApp.Worker\DotNetAspireApp.Worker.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.2" />
-    <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="8.2.2" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.2" />
+  <ItemGroup>
+    <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="13.1.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="13.1.0" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' OR '$(TargetFramework)' == '' ">
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.0" />
-    <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.3.0" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="9.3.0" />
-  </ItemGroup>
-
-  <!--<ItemGroup>
-    <Reference Include="$(TargetFramework)" />
-  </ItemGroup>-->
 
 </Project>
