--- a/Global.Build.props
+++ b/Global.Build.props
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!--<TargetFramework>net8.0</TargetFramework>-->
-    <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
     <LangVersion>preview</LangVersion>    
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>    
