--- a/samples/Aspire/DotNetAspireApp.Web/DotNetAspireApp.Web.csproj
+++ b/samples/Aspire/DotNetAspireApp.Web/DotNetAspireApp.Web.csproj
@@ -8,15 +8,12 @@
     <ProjectReference Include="..\DotNetAspireApp.ServiceDefaults\DotNetAspireApp.ServiceDefaults.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
-    <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="8.2.2" />
-  </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
-    <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="9.3.0" />
+  <ItemGroup>
+    <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="13.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Radzen.Blazor" Version="7.0.7" />
+    <PackageReference Include="Radzen.Blazor" Version="8.7.5" />
   </ItemGroup>
 
 </Project>
