--- a/.editorconfig
+++ b/.editorconfig
@@ -50,9 +50,9 @@ dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
 # use int.MaxValue over Int32.MaxValue
 dotnet_style_predefined_type_for_member_access = true:suggestion
 
-# Require var all the time.
-csharp_style_var_for_built_in_types = true:suggestion
 csharp_style_var_when_type_is_apparent = true:suggestion
+# Prefer explicit types over var.
+csharp_style_var_for_built_in_types = false:suggestion
 csharp_style_var_elsewhere = false:suggestion
 
 # Disallow throw expressions.
@@ -348,8 +348,8 @@ dotnet_diagnostic.CA2249.severity = warning
 # IDE0005: Remove unnecessary usings
 dotnet_diagnostic.IDE0005.severity = warning
 
-# IDE0007: use 'var' instead of explicit type
-dotnet_diagnostic.IDE0007.severity = suggestion
+# IDE0008: use explicit type instead of 'var'
+dotnet_diagnostic.IDE0008.severity = suggestion
 
 # IDE0011: Curly braces to surround blocks of code
 dotnet_diagnostic.IDE0011.severity = suggestion
